
= raabro CHANGELOG.txt


== raabro 1.0.2  not yet released


== raabro 1.0.1  released 2015-09-23

- take last parser as default :root
- provide default .parse for modules including Raabro


== raabro 1.0.0  released 2015-09-23

- first complete (hopefully) release


== raabro 0.9.0

- initial push to RubyGems
